@@ -1,6 +1,9 @@
 
                 CHANGES in `mboost' VERSION 2.1-0 (2010-0x-xx)
 
+  o  bolscw can be mixed with other base-learners (although
+     not yet exported and not via the formula interface)
+
   o  speed up glmboost() a little bit
 
   o  added base-learners for radial basis functions (brad())
